<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reader</string>
    <string name="hello_world">Speed Reader</string>
    <string name="action_settings">Settings</string>
    <string name="display_text">word</string>
    <string name="content_text">This text will be displayed one word at a time to facilitate 
        speed reading using the \'spritz\' method. I hope to include text from the course 
        lectures that have been saved as a resource to provide selectable content for this app if time allows.
        A \'Toast\' will indicate states for the app like \'content loaded\' and \'end-of-file\'.
            The idea is to take a text document and display one word at a time in a textview
        at a pre-defined rate. The working app should satisfy the grading rubric and more. The process
        includes converting the text into a list of words. Each word will be displayed in the center of the 
        window and then replaced after a short delay. Periods will trigger a slightly
        extended pause to help pacing. Tabs will be used to determine paragraphs.
            I hope to later add controls to pause, save and rewind the text
        by one sentence. The save function will allow the reader to save their reading
        position for later sessions. I also hope to add feedback controls that report
        percentage progress through the text, time spent reading, and the current reading 
        rate. If I have the time I will also include a file chooser to allow the user to
        load new text documents. Perhaps I can figure out a way to save multiple reading sessions 
        with their last reading position rounded to the previous sentence or paragraph. 
        I am hoping this will be a very useful app out of the box. I hope to also add
        several enhancements that could possibly go into a paid version.</string>
    <string name="start_btn">Step</string>
    <string name="stop_btn">Reset</string>
    <string name="load_btn">Load</string>
    <string name="save_bnt">Save</string>
    <string name="quit_btn">Quit</string>

</resources>
