<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="coursera.reader.MainActivity" >

    <EditText
        android:id="@+id/fulltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        android:text="@string/content_text"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/titleview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/app_name"
        android:text="@string/hello_world"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wordview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/display_text"
        android:textColor="#ff000000"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="134dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/stepbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doStart"
                android:text="@string/start_btn" />

            <Button
                android:id="@+id/resetbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="34dp"
                android:onClick="doStop"
                android:text="@string/stop_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/loadbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doLoad"
                android:text="@string/load_btn" />

            <Button
                android:id="@+id/savebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:onClick="doSave"
                android:text="@string/save_bnt" />

            <Button
                android:id="@+id/quitbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doQuit"
                android:text="@string/quit_btn" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>